--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "lpi-pdu-extension",
-  "version": "1.0.0",
-  "description": "LPI PDU Extension",
+  "name": "web-extension-starter",
+  "version": "3.0.0",
+  "description": "Web extension starter using react and javascript",
   "private": true,
-  "repository": "https://github.com/juanbaez/lpi-pdu-extension.git",
+  "repository": "https://github.com/abhijithvijayan/web-extension-starter.git",
   "author": {
-    "name": "Juan Ibarra",
-    "email": "baez.juann@gmail.com"
+    "name": "abhijithvijayan",
+    "email": "email@abhijithvijayan.in",
+    "url": "https://abhijithvijayan.in"
   },
   "license": "MIT",
   "engines": {
@@ -21,8 +22,8 @@
     "build:firefox": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=firefox webpack",
     "build:opera": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=opera webpack",
     "build": "yarn run build:chrome && yarn run build:firefox && yarn run build:opera",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
@@ -31,12 +32,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webext-base-css": "^1.2.0",
-    "webextension-polyfill-ts": "^0.22.0"
+    "webextension-polyfill": "^0.7.0"
   },
   "devDependencies": {
     "@abhijithvijayan/eslint-config": "2.5.6",
     "@abhijithvijayan/eslint-config-airbnb": "^1.0.2",
-    "@abhijithvijayan/tsconfig": "^1.3.0",
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
@@ -44,12 +44,8 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@types/webpack": "^4.41.25",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "autoprefixer": "^10.0.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
@@ -57,16 +53,15 @@
     "copy-webpack-plugin": "^6.3.1",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "filemanager-webpack-plugin": "^3.0.0-alpha.7",
-    "fork-ts-checker-webpack-plugin": "^6.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^4.14.1",
@@ -77,7 +72,6 @@
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
     "terser-webpack-plugin": "^4.2.3",
-    "typescript": "^4.0.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
     "webpack-extension-reloader": "^1.1.4",
