--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "LPI PDU Extension",
+  "name": "Sample WebExtension",
   "version": "0.0.0",
 
   "icons": {
@@ -10,8 +10,8 @@
     "128": "assets/icons/favicon-128.png"
   },
   "description": "Sample description",
-  "homepage_url": "https://github.com/juanbaez/lpi-pdu-extension",
-  "short_name": "LPI PDU Extension",
+  "homepage_url": "https://github.com/abhijithvijayan/web-extension-starter",
+  "short_name": "Sample Name",
 
   "permissions": [
     "activeTab",
